# inhibit

./: .gitignore  Cargo.toml  Makefile  README.md
icons/: credits
src/: main.rs
